// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`git trunk release changelog is generated 1`] = `
"## c658ea3 (2021-10-08)


### Features

* ... ([c658ea3](https://github.com/t/t/commit/c658ea3e060490dced90dfb34c018d88b8e797f9))

"
`;

exports[`git trunk release previous version changelog is generated 1`] = `
"## 10f0340 (2021-10-08)


### Features

* ... ([c658ea3](https://github.com/t/t/commit/c658ea3e060490dced90dfb34c018d88b8e797f9))

"
`;
